NI-DAQ/include/nidaq.h

typedef char i8;
typedef short i16;
typedef long i32;
typedef unsigned long u32;
typedef double f64;
extern i16 WINAPI SCXI_Single_Chan_Setup (
	i16        chassisID,
	i16        moduleSlot,
	i16        chan,
	i16        DAQboard);
extern i16 WINAPI SCXI_Track_Hold_Control (
	i16        chassisID,
	i16        moduleSlot,
	i16        state,
	i16        DAQboard);
extern i16 WINAPI SCXI_Track_Hold_Setup (
	i16        chassisID,
	i16        moduleSlot,
	i16        mode,
	i16        source,
	i16        send,
	i16        holdCnt,
	i16        DAQboard);
extern i16 WINAPI Select_Signal (
	i16        deviceNumber,
	u32        signal,
	u32        source,
	u32        sourceSpec);
extern i16 WINAPI Set_DAQ_Device_Info (
	i16        deviceNumber,
	u32        infoType,
	u32        infoVal);
extern i16 WINAPI Timeout_Config (
	i16        slot,
	i32        numTicks);
extern i16 WINAPI WFM_Chan_Control (
	i16        slot,
	i16        channel,
	i16        operation);
extern i16 WINAPI WFM_Check (
	i16        slot,
	i16        channel,
	i16        FAR * progress,
	u32        FAR * itersDone,
	u32        FAR * pointsDone);
extern i16 WINAPI WFM_ClockRate (
	i16        slot,
	i16        group,
	i16        whickClock,
	i16        timebase,
	u32        updateInterval,
	i16        mode);
extern i16 WINAPI WFM_DB_Config (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        DBMode,
	i16        oldDataStop,
	i16        partialTransfer);
extern i16 WINAPI WFM_DB_HalfReady (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        FAR * halfReady);
extern i16 WINAPI WFM_DB_Transfer (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        FAR * buffer,
	u32        cnt);
extern i16 WINAPI WFM_from_Disk (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i8         FAR * fileName,
	u32        startPts,
	u32        endPts,
	u32        iterations,
	f64        rate);
extern i16 WINAPI WFM_Group_Control (
	i16        slot,
	i16        group,
	i16        operation);
extern i16 WINAPI WFM_Group_Setup (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        group);
extern i16 WINAPI WFM_Load (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        FAR * buffer,
	u32        cnt,
	u32        iterations,
	i16        mode);
extern i16 WINAPI WFM_Op (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        FAR * buffer,
	u32        cnt,
	u32        iterations,
	f64        rate);
extern i16 WINAPI WFM_Rate (
	f64        rate,
	i16        units,
	i16        FAR * timebase,
	u32        FAR * updateInterval);
extern i16 WINAPI WFM_Scale (
	i16        slot,
	i16        chan,
	u32        cnt,
	f64        gain,
	f64        FAR * voltArray,
	i16        FAR * binArray);
extern i16 WINAPI AI_Read_Scan (
	i16        slot,
	i16        FAR * reading);
extern i16 WINAPI AI_VRead_Scan (
	i16        slot,
	f64        FAR * reading);
extern i16 WINAPI SCXI_ModuleID_Read (
	i16        scxiID,
	i16        moduleSlot,
	i32        FAR * id);
extern i16 WINAPI AO_VScale (
	i16        slot,
	i16        chan,
	f64        voltage,
	i16        FAR * value);
extern i16 WINAPI GPCTR_Change_Parameter (
	i16        deviceNumber,
	u32        gpCounterNumber,
	u32        paramID,
	u32        paramValue);
extern i16 WINAPI DIG_Trigger_Config (
	i16        slot,
	i16        grp,
	i16        startTrig,
	i16        startPol,
	i16        stopTrig,
	i16        stopPol,
	u32        ptsAfterStopTrig,
	u32        pattern,
	u32        patternMask);
extern i16 WINAPI Combine_Signals (
	i16        deviceNumber,
	u32        internalLine,
	i8         FAR * logicalExpression);
extern i16 WINAPI SCXI_Set_Threshold (
	i16        chassisID,
	i16        moduleSlot,
	i16        channel,
	f64        threshHold,
	f64        hysteresis);
extern i16 WINAPI WFM_Set_Clock (
	i16        slot,
	i16        group,
	u32        whichClock,
	f64        desiredRate,
	u32        units,
	f64        FAR * actualRate);
extern i16 WINAPI DAQ_Set_Clock (
	i16        slot,
	u32        whichClock,
	f64        desiredRate,
	u32        units,
	f64        FAR * actualRate);
extern i16 WINAPI Tio_Select_Signal (
	i16        deviceNumber,
	u32        signal,
	u32        source,
	u32        sourceSpec,
	u32        chipID);
extern i16 WINAPI Tio_Combine_Signals (
	i16        deviceNumber,
	u32        internalLine,
	u32        logicalExpression,
	u32        chipID);
extern i16 WINAPI USE_E_Series (
	void);
extern i16 WINAPI USE_E_Series_AI (
	void);
extern i16 WINAPI USE_E_Series_AO (
	void);
extern i16 WINAPI USE_E_Series_DIO (
	void);
extern i16 WINAPI USE_E_Series_GPCTR (
	void);
extern i16 WINAPI USE_E_Series_GPCTR_Simple (
	void);
extern i16 WINAPI USE_E_Series_Misc (
	void);
extern i16 WINAPI USE_E_Series_WFM (
	void);
extern i16 WINAPI USE_E_Series_DAQ (
	void);
extern i16 WINAPI USE_MIO (
	void);
extern i16 WINAPI USE_LPM (
	void);
extern i16 WINAPI USE_LAB (
	void);
extern i16 WINAPI USE_DIO_96 (
	void);
extern i16 WINAPI USE_DIO_32F (
	void);
extern i16 WINAPI USE_DIO_24 (
	void);
extern i16 WINAPI USE_AO_610 (
	void);
extern i16 WINAPI USE_AO_2DC (
	void);