NI-DAQ/include/nidaq32.bas

Declare Function SCXI_Single_Chan_Setup% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c%, ByVal d%)
Declare Function SCXI_Track_Hold_Control% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c%, ByVal d%)
Declare Function SCXI_Track_Hold_Setup% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c%, ByVal d%, ByVal e%, ByVal f%, ByVal g%)
Declare Function Select_Signal% Lib "nidaq32.dll" (ByVal a%, ByVal b&, ByVal c&, ByVal d&)
Declare Function Set_DAQ_Device_Info% Lib "nidaq32.dll" (ByVal a%, ByVal b&, ByVal c&)
Declare Function Timeout_Config% Lib "nidaq32.dll" (ByVal a%, ByVal b&)
Declare Function WFM_Chan_Control% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c%)
Declare Function WFM_Check% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c%, d&, e&)
Declare Function WFM_ClockRate% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c%, ByVal d%, ByVal e&, ByVal f%)
Declare Function WFM_DB_Config% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c%, ByVal d%, ByVal e%, ByVal f%)
Declare Function WFM_DB_HalfReady% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c%, d%)
Declare Function WFM_DB_Transfer% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c%, d%, ByVal e&)
Declare Function WFM_from_Disk% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c%, ByVal d$, ByVal e&, ByVal f&, ByVal g&, ByVal h#)
Declare Function WFM_Group_Control% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c%)
Declare Function WFM_Group_Setup% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c%, ByVal d%)
Declare Function WFM_Load% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c%, d%, ByVal e&, ByVal f&, ByVal g%)
Declare Function WFM_Op% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c%, d%, ByVal e&, ByVal f&, ByVal g#)
Declare Function WFM_Rate% Lib "nidaq32.dll" (ByVal a#, ByVal b%, c%, d&)
Declare Function WFM_Scale% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c&, ByVal d#, e#, f%)
Declare Function AI_Read_Scan% Lib "nidaq32.dll" (ByVal a%, b%)
Declare Function AI_VRead_Scan% Lib "nidaq32.dll" (ByVal a%, b#)
Declare Function SCXI_ModuleID_Read% Lib "nidaq32.dll" (ByVal a%, ByVal b%, c&)
Declare Function USE_E_Series% Lib "nidaq32.dll" ()
Declare Function USE_E_Series_AI% Lib "nidaq32.dll" ()
Declare Function USE_E_Series_AO% Lib "nidaq32.dll" ()
Declare Function USE_E_Series_DIO% Lib "nidaq32.dll" ()
Declare Function USE_E_Series_GPCTR% Lib "nidaq32.dll" ()
Declare Function USE_E_Series_GPCTR_Simple% Lib "nidaq32.dll" ()
Declare Function USE_E_Series_Misc% Lib "nidaq32.dll" ()
Declare Function USE_E_Series_WFM% Lib "nidaq32.dll" ()
Declare Function AO_VScale% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c#, d%)
Declare Function GPCTR_Change_Parameter% Lib "nidaq32.dll" (ByVal a%, ByVal b&, ByVal c&, ByVal d&)
Declare Function USE_E_Series_DAQ% Lib "nidaq32.dll" ()
Declare Function USE_MIO% Lib "nidaq32.dll" ()
Declare Function USE_LPM% Lib "nidaq32.dll" ()
Declare Function USE_LAB% Lib "nidaq32.dll" ()
Declare Function USE_DIO_96% Lib "nidaq32.dll" ()
Declare Function USE_DIO_32F% Lib "nidaq32.dll" ()
Declare Function USE_DIO_24% Lib "nidaq32.dll" ()
Declare Function USE_AO_610% Lib "nidaq32.dll" ()
Declare Function USE_AO_2DC% Lib "nidaq32.dll" ()
Declare Function DIG_Trigger_Config% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c%, ByVal d%, ByVal e%, ByVal f%, ByVal g&, ByVal h&, ByVal i&)
Declare Function Combine_Signals% Lib "nidaq32.dll" (ByVal a%, ByVal b&, ByVal c$)
Declare Function SCXI_Set_Threshold% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c%, ByVal d#, ByVal e#)
Declare Function WFM_Set_Clock% Lib "nidaq32.dll" (ByVal a%, ByVal b%, ByVal c&, ByVal d#, ByVal e&, f#)
Declare Function DAQ_Set_Clock% Lib "nidaq32.dll" (ByVal a%, ByVal b&, ByVal c#, ByVal d&, e#)
Declare Function Tio_Select_Signal% Lib "nidaq32.dll" (ByVal a%, ByVal b&, ByVal c&, ByVal d&, ByVal e&)
Declare Function Tio_Combine_Signals% Lib "nidaq32.dll" (ByVal a%, ByVal b&, ByVal c&, ByVal d&)



